Fixed centering on mobile
Fixed centering on mobile

--- a/old-site/css/main.css
+++ b/old-site/css/main.css
@@ -20,21 +20,26 @@ html, body {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 1.9%;
+    display: inline-block;
   }
   .module p {
     text-align: center;
     font-size: 14px;
     display: block;
     position: relative;
-    padding-right: 10%;
+    padding-left: 13%;
+    padding-right: 13%;
   }
   .circle {
     border: 1px solid #a1a1a1;
-    padding: 10px; 
+    padding-top: 10px; 
     background: #dddddd;
     height: 150px;
     width: 150px;
     border-radius: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
